# Nova

./: .gitignore  .gitignoreyyy  LICENSE-SCHEMAS  README.md  TRADEMARKS.md  apply_e2b.py  check_schema.py  deck.py  loop.py  make_brief_pdf.py  nova.py  nova_config.json  pyproject.toml  sticky_export.py  test_dispatch.py
Nova/: 2026-04-11.md  Nova session 04.011.26 session 3.md  Nova session 04.12.26.md  docs technology_radar.mdUntitled.md  nova.py  test_dispatch.py
core/: agents.py  ai_engine.py  ast_shield.py  dispatcher.py  dream_lab.py  executor.py  identity.py  loop.py  memory.py  noe.py  openai_engine.py  planner.py  reflector.py  sandbox.py  scheduler.py  test_dispatch.py  tools.py
db/: nova.db
docker/: Dockerfile.nova-sandbox
docs/: FINDINGS.md  MIGRATION_V0_TO_V1_NOTES.md  environment.md  learning_log.md
docs/adr/: 0007-schema-version-namespace-collision.md  0008-embedding-metadata-schema-version-default.md  ADR-137-track-b-sha256-provenance.md
docs/briefs/: BRIEF-NNN-short-slug.md  (+2 more)
noe/: noe_engine.py
nova/: apply_e2b.py
scripts/: make_brief_pdf.p  test_foundation.py
tests/: conftest.py  test_artifact_embedding.py  test_ast_shield.py  test_detect_v0_kind.py  test_dispatcher_characterization.py  test_embedder.py  test_enrich_artifact_embedding.py  test_enrich_artifact_shape.py  test_episode.py  test_episodic.py  test_loop_embedding.py  test_provenance.py  test_schemas_legacy.py
tools/: __init__.py  dispatcher.py  file_read.py  file_write.py  provenance_inspect.py  replay_schema_check.py  run_python.py  web_search.py  yahoo_credentials.py
(+92 files in other folders)
